tests/negative/parser/undefined.orng
// undefined.orng:7:23: error: variable declarations require at least a type or an intial value
//     let x = undefined
//                      ^
// 

fn main() -> Int {
    let x = undefined
    x = 343
    x
}